--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.19.5"
+    "@types/react-datepicker": "^4.19.5",
+    "prettier": "^3.2.5"
   }
 }
